# stu_manage_0507

./: CMakeLists.txt  task4.doc  大作业报告模板.docx
include/: class.h  csv_file_utils.h  hans_utils.h  linked_list.h  manager.h  student.h
src/: class.c  csv_file_utils.c  hans_utils.c  linked_list.c  main.c  manager.c  student.c
